# npc-engine

./: .gitattributes  AUTHORS.txt  Cargo.toml  LICENSE-MIT  README.md  cspell.json
.github/workflows/: ci.yml
npc-engine-common/: Cargo.toml
npc-engine-common/examples/: capture.rs  learn.rs  plot-learn.py  tic-tac-toe.rs
npc-engine-common/examples/capture/: constants.rs  domain.rs  main.rs  state.rs
npc-engine-common/examples/capture/behavior/: agent.rs  world.rs
npc-engine-common/examples/capture/task/: capturing.rs  moving.rs  pick.rs  shoot.rs  world.rs
npc-engine-common/examples/ecosystem/: constants.rs  domain.rs  main.rs  map.rs  state.rs
npc-engine-common/examples/ecosystem/behavior/: animal.rs  carnivore.rs  herbivore.rs  mod.rs  world.rs
npc-engine-common/examples/ecosystem/task/: eat_grass.rs  eat_herbivore.rs  jump.rs  mod.rs  move.rs  world.rs
npc-engine-common/examples/learn/: behavior.rs  domain.rs  estimator.rs  main.rs
npc-engine-common/examples/learn/task/: collect.rs  left.rs  mod.rs  right.rs
npc-engine-common/examples/tic-tac-toe/: board.rs  domain.rs  main.rs  move.rs  player.rs
npc-engine-common/src/: active_task.rs  behavior.rs  config.rs  domain.rs  edge.rs  lib.rs  mcts.rs  node.rs  state_diff.rs  task.rs  util.rs
npc-engine-common/tests/: branching_tests.rs  sanity_tests.rs  seeding_tests.rs  value_tests.rs
npc-engine-core/: AUTHORS.txt  Cargo.toml
npc-engine-core/benches/: mcts.rs
npc-engine-core/examples/capture/: constants.rs  domain.rs  main.rs  map.rs  state.rs
npc-engine-core/examples/capture/behavior/: agent.rs  mod.rs  world.rs
npc-engine-core/examples/capture/task/: capturing.rs  mod.rs  moving.rs  pick.rs  shoot.rs  world.rs
npc-engine-core/examples/ecosystem/: constants.rs  domain.rs  main.rs  map.rs  plot_ecosystem_stats.py  state.rs
npc-engine-core/examples/ecosystem/behavior/: animal.rs  carnivore.rs  herbivore.rs  world.rs
npc-engine-core/examples/ecosystem/task/: eat_grass.rs  eat_herbivore.rs  jump.rs  mod.rs  move.rs  world.rs
npc-engine-core/examples/learn/: behavior.rs  constants.rs  domain.rs  estimator.rs  main.rs  state.rs
npc-engine-core/examples/learn/task/: collect.rs  left.rs  right.rs
npc-engine-core/examples/tic-tac-toe/: domain.rs  main.rs  move.rs  player.rs
npc-engine-core/src/: active_task.rs  behavior.rs  config.rs  context.rs  domain.rs  edge.rs  lib.rs  mcts.rs  node.rs  state_diff.rs  task.rs  util.rs
npc-engine-core/tests/: branching_tests.rs  sanity_tests.rs  seeding_tests.rs  value_tests.rs
npc-engine-turn/: Cargo.toml
npc-engine-turn/src/: lib.rs  mcts.rs
npc-engine-turn/tests/: branching_tests.rs  sanity_tests.rs  seeding_tests.rs  value_tests.rs
npc-engine-utils/: Cargo.toml
npc-engine-utils/src/: coord2d.rs  direction.rs  domain.rs  executor.rs  functional.rs  global_domain.rs  graphs.rs  lib.rs  neuron.rs  option_state_diff.rs
scenario-lumberjacks/: Cargo.toml  build.rs  schema.json
scenario-lumberjacks/configs/: corridor.json
scenario-lumberjacks/experiments/: base.json  config.schema.json  corridor.json  experiment.schema.json  schema.json
scenario-lumberjacks/experiments/barrier/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/competition-basic/: base.json  plot.json
scenario-lumberjacks/experiments/depth/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/depth-choice/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/optimization/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/specialization/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/tasks/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/teamwork-basic/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/visit-count-large/: base.json  experiment.json  plot.json
scenario-lumberjacks/experiments/visit-count-small/: base.json  experiment.json  plot.json
scenario-lumberjacks/src/: config.rs  fitnesses.rs  game.rs  graph.rs  heatmap.rs  hooks.rs  inventory.rs  lib.rs  lumberjacks_domain.rs  screenshot.rs  serialization.rs  tilemap.rs  util.rs  world.rs
scenario-lumberjacks/src/behaviors/: human.rs  lumberjack.rs  mod.rs
scenario-lumberjacks/src/metrics/: agency.rs  features.rs  fluctuation.rs  islands.rs  mod.rs  performance.rs
scenario-lumberjacks/src/tasks/: barrier.rs  chop.rs  mod.rs  move.rs  plant.rs  refill.rs  wait.rs  water.rs
