[package]
name = "npc-engine-common"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "Stéphane Magnenat <stephanee.magnenat@inf.ethz.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
serde = { version = "1", features = [ "derive" ] }
rand = "~0.8"
rand_chacha = "~0.3"
ordered-float = "2.10.0"