[package]
name = "npc-engine-common"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "David Enderlin <daviden@student.ethz.ch>", "Stéphane Magnenat <stephanee.magnenat@inf.ethz.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
serde = { version = "1", features = [ "derive" ] }
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
ordered-float = "2.10.0"
dot = { version = "0.1", optional = true }
palette = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
cached = "0.30"
bounded-integer = { version = "0.5.1", features = [ "types" ] }
regex = "1"

[features]
default = []
graphviz = [ "dot", "palette" ]

[[example]]
name = "tic-tac-toe"
required-features = ["graphviz"]