[package]
name = "npc-engine-core"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "David Enderlin <daviden@student.ethz.ch>", "Aydin Faraji <afaraji@student.ethz.ch>", "Stéphane Magnenat <stephane.magnenat@inf.ethz.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The core of the NPC engine, providing a generic MCTS framework."
repository = "https://github.com/ethz-gtc/npc-engine"
homepage = "https://github.com/ethz-gtc/npc-engine"
readme = "README.md"
keywords = ["MCTS", "AI", "multi-agent", "simulation", "game"]
categories = ["algorithms", "science", "simulation", "game-development"]
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
serde = { version = "1", features = [ "derive" ] }
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
ordered-float = "3"
dot = { version = "0.1", optional = true }
palette = { version = "0.5", optional = true }

[dev-dependencies]
npc-engine-utils = { path = "../npc-engine-utils" }
env_logger = "0.9.0"
cached = "0.30"
bounded-integer = { version = "0.5.1", features = [ "types" ] }
regex = "1"
nonmax = "0.5"
lazy_static = "1.4"
ansi_term = "0.12"
clearscreen = "1.0.10"
num-traits = { version = "0.2.1", default-features = false }

[features]
default = []
graphviz = [ "dot", "palette" ]

[[example]]
name = "tic-tac-toe"
required-features = ["graphviz"]