[package]
name = "npc-engine-turn"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "Stéphane Magnenat <stephanee.magnenat@inf.ethz.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
npc-engine-common = { path = "../npc-engine-common" }
rand = "~0.8"
rand_chacha = "~0.3"
log = "~0.4"
serde = { version = "^1", features = [ "derive" ] }
downcast-rs = "1.2.0"
dot = { version = "~0.1", optional = true }
palette = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = []
graphviz = [ "dot", "palette" ]
heatmap = []

