[package]
name = "npc-engine-utils"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "David Enderlin <daviden@student.ethz.ch>", "Stéphane Magnenat <stephane.magnenat@inf.ethz.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The utility module of the NPC engine, providing re-usable support code"
repository = "https://github.com/ethz-gtc/npc-engine"
homepage = "https://github.com/ethz-gtc/npc-engine"
readme = "README.md"
keywords = ["Monte Carlo Tree Search", "Artificial Intelligence", "multi-agent simulation", "game theory", "emergent storytelling"]
categories = ["algorithms", "science", "simulation", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
npc-engine-common = { version = "0.1", path = "../npc-engine-common", features = ["graphviz"] }
log = "0.4"
ansi_term = "0.12"
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
env_logger = "0.9.0"