[package]
name = "lumberjacks"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "Stéphane Magnenat <stephanee.magnenat@inf.ethz.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "~0.5"
env_logger = "0.9.0"
rand = "~0.7"
palette = "~0.5"
log = "~0.4"
image = "~0.23"
lazy_static = "^1.4"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1"
clap = "^2"
dot = "~0.1"
partitions = "~0.2"
rayon = "^1.3"
num-traits = "*"

npc-engine-common = { path = "../npc-engine-common", features = [ "graphviz" ] }
npc-engine-utils = { path = "../npc-engine-utils" }

[lib]
path = "./src/lib.rs"

[[bin]]
name = "lumberjacks"
path = "./src/bin/lumberjacks.rs"

[[bin]]
name = "lumberjacks-experiment"
path = "./src/bin/experiment.rs"
